# small_tel

./: .gitignore  README.md
Auxiliary_utils/Hydreon/: Hydreon_RG11.config  Hydreon_RG11.creator.user.7bd84e3  Hydreon_RG11.files  Makefile  Readme  Readme.connection  Readme.protocol  cmdlnopts.c  cmdlnopts.h  dumpregs.c  hedreon_fields  hydreon.c  hydreon.h  out_02
Auxiliary_utils/LibSidServo/: CMakeLists.txt  PID.c  PID.h  TODO  dbg.h  kalman.c  kalman.h  libsidservo.config  libsidservo.creator.user.7bd84e3  libsidservo.creator.user.cf63021  libsidservo.files  main.c  main.h  mainconf.conf  movingfilter.c  movingmodel.c  movingmodel.h  ramp.c  ramp.h  serial.c  serial.h  servo_real.conf  sidservo.h  sidservo.pc.in  ssii.c  ssii.h
Auxiliary_utils/LibSidServo/PID_test/: Dramp.c  Dramp.h  Makefile  PID.c  PID.h  Tramp.c  main.c  moving.c  moving.h  moving_model.creator.user.7bd84e3  moving_model.files  moving_private.h  plot  plot.cont  plot_jpg  plotacc  ploterr  ploterr.cont  ploterr_jpg
Auxiliary_utils/LibSidServo/examples/: CMakeLists.txt  Readme.md  SSIIconf.c  conf.c  conf.h  dump.c  dump.h  dumpmoving.c  dumpmoving_dragNtrack.c  dumpmoving_scmd.c  dumpswing.c  goto.c  scmd_traectory.c  servo.conf  simpleconv.h  traectories.c  traectories.h
Auxiliary_utils/LibSidServo/moving_model/: Dramp.c  Sramp.c  Sramp.h  Tramp.c  Tramp.h  main.c  moving.c  moving.h  moving_model.config  plot  plot_pdf
Auxiliary_utils/LibSidServo/polltest/: main.c
Auxiliary_utils/PCS_create/: CMakeLists.txt  Makefile  PCS.c  PCS_create.config  PCS_create.creator.user.22  PCS_create.creator.user.7bd84e3.4.9-pre1  PCS_create.files  Readme  cmdlnopts.c  cmdlnopts.h  sofatools.c  sofatools.h
Auxiliary_utils/SILA_inverter/: Makefile  Readme.md  getparams.c
Auxiliary_utils/SiderealServoII/: Makefile  SSII.config  SSII.creator.user.7bd84e3  SSII.creator.user.cf63021  SSII.files  cmdlnopts.c  cmdlnopts.h  emulator.c  emulator.h  main.c  motlog.c  motlog.h  sidservo.c  sidservo.h
Auxiliary_utils/Sun/: Makefile  Readme  sun.c
Auxiliary_utils/Weather_chk/: CMakeLists.txt  Readme.md  cmdlnopts.c  cmdlnopts.h  main.c  weatherchk.creator.user.22
Auxiliary_utils/bash_scripts/: AZpoint  HWoff  STARTobs  STOPobs  allsky_sixel.sh  allsky_sixel_weather.sh  copy_and_xz.sh  getflats  park_telescope  park_telescope_1  park_telescope_2  point_AH.sh  point_get_flat.sh  preflash  run  run_full.new_foc  run_w_arrays  setup_obs.sh  solve_all  solve_one  video2dome1-2.sh
Auxiliary_utils/calc_points/: Makefile  cmdlnopts.c  cmdlnopts.h  main.c
Auxiliary_utils/deprecated/Weather_chk/: cmdlnopts.c  weatherchk.files
Auxiliary_utils/focussing/: Makefile  Readme  main.c
Auxiliary_utils/libastrotools/: CMakeLists.txt  Changelog  Readme.md  astrotools.files  astrotools.h  astrotools.includes  astrotools.pc.in  erfa.c
Auxiliary_utils/libastrotools/examples/: CMakeLists.txt  coordstest.c  transform.c
Auxiliary_utils/sofa_functions/: Makefile  Readme  sofa.c  sofa.files
Daemons/: 2DO.txt  Readme.md
Daemons/10micron_stellarium/: 10micron_readme.koi8-r  Makefile  StelD.creator.user.cf63021.4.9-pre1  StelD.files  cmdlnopts.c  cmdlnopts.h  emulation.c  libsofa.c  libsofa.h  main.c  main.h  parseargs.c  socket.c  socket.h  telescope.c  telescope.h  usefull_macro.c  usefull_macro.h  usefull_macros.c
Daemons/README_install/: Readme  netdaemons_start  robotel
Daemons/astrosib/: Chfocus  CloseScope  GetCoords  GoTo  HWon  OpenScope  Readme  STARTobs  STOPobs  park_tel.sh  park_telescope  solve_all  solve_one
Daemons/deprecated/: Readme
Daemons/deprecated/10micron_stellarium.deprecated/: Makefile  (+15 more)
Daemons/domedaemon-astrosib/: CMakeLists.txt  Readme.md  astrosib_proto.h  dome.c  dome.h  domedaemon-astrosib.config  domedaemon-astrosib.files  header.c  header.h  main.c  server.c  server.h  socket.c
Daemons/domedaemon-astrosib.deprecated/: main.c  term.h  usefull_macros.c
Daemons/domedaemon_baader/: Makefile  Readme.md  baader_dome.files  commands.h  dome_readme.koi8-r  header.c  header.h  main.c  socket.c  socket.h  term.c  term.h
Daemons/netdaemon/: cmdlnopts.c  netdaemon-template.files  term.c  usefull_macros.h
Daemons/netdaemon.deprecated/: main.c  term.c  usefull_macros.c
Daemons/netsocket/: HWpoweroff  HWpoweron  MOUNTpoweronoff  Readme  poweron_readme.koi8-r
Daemons/send_coordinates/: Makefile  Readme  SendCoords.files  cmdlnopts.c  cmdlnopts.h  main.c  stelldaemon.c  stelldaemon.h
Daemons/teldaemon/: main.c  teldaemon
Daemons/teldaemon_astrosib/: Makefile  Readme.md  commands.h  header.c  header.h  main.c  socket.c  socket.h  teldaemon.config  teldaemon.files  term.c  term.h
Daemons/weather_database/: Makefile  Readme  loghere  main.c  socket.c  socket.h  sql.c  sql.h  sqlite.config  sqlite.files
Daemons/weather_proxy/: Makefile  Readme.md  chkweather.c  weather_client.c  weather_clt_example.c  weather_daemon.c  weather_data.h  weather_proxy.files
Daemons/weatherdaemon/: Makefile  Readme.md  cmdlnopts.c  cmdlnopts.h  main.c  socket.c  term.c  term.h  weatherdaemon.config
Daemons/weatherdaemon.deprecated/: Makefile  Readme.md  cmdlnopts.c  term.c  weatherdaemon.creator.user.4.9-pre1
Daemons/weatherdaemon_multimeteo/: CMakeLists.txt  Readme.md  cmdlnopts.c  cmdlnopts.h  example.config  fd.c  fd.h  main.c  mainweather.c  mainweather.h  sensors.c  sensors.h  server.c  server.h  weatherdaemon.files  weathlib.c  weathlib.h
Daemons/weatherdaemon_multimeteo/plugins/: CMakeLists.txt  UPS-MIB.csv  bta_shdata.c  bta_shdata.h  btameteo.c  dummy.c  fdexample.c  hydreon.c  lightning.c  reinhardt.c  snmp.c  wxa100.c
Daemons/weatherdaemon_newmeteo/: Makefile  socket.c  socket.h  stat.c  stat.h  term.c  term.h  weatherdaemon.files
Docs/: README_ASTROMETRY.koi8-r  README_POWER_management.koi8-r  Readme.md  ed.sty  focus
Docs/Alignment/: PROCESS  Readme.md  coordslist  makelist
Docs/Common_descrription/: arcunits.sty  common.tex
Docs/Need2do/: needs.tex
Docs/Reglamented_works/: reglamented.tex
calc_points/: Readme  main.c  uniform.c  uniform.h  uniformdistr.config  uniformdistr.files
(+46 files in other folders)
